@@ -1,0 +1,23 @@
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+name = "pypi"
+
+[dev-packages]
+pylint = "*"
+pytest = "*"
+twine = "*"
+
+[packages]
+"e1839a8" = {path = ".", editable = true}
+GitPython = ">= 2.1.8"
+colorama = ">= 0.3.9"
+
+[requires]
+python_version = "3.7"
+
+[scripts]
+test = "pytest gitup -v -rxw"
+lint = "pylint --disable=missing-docstring --output-format=colorized gitup"
+cloc = "cloc --vcs=git"
+build = "python setup.py sdist bdist_wheel --universal"
