@@ -18,7 +18,7 @@ with open('README.md') as fp:
 setup(
     name = "gitup",
     packages = find_packages(),
-    entry_points = {"console_scripts": ["gitup = gitup.script:run"]},
+    entry_points = {"console_scripts": ["gitup = gitup.cli:run"]},
     install_requires = ["GitPython >= 2.1.8", "colorama >= 0.3.9"],
     version = __version__,
     author = "Ben Kurtovic",
@@ -41,8 +41,6 @@ setup(
         "Programming Language :: Python",
         "Programming Language :: Python :: 2.7",
         "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.2",
-        "Programming Language :: Python :: 3.3",
         "Programming Language :: Python :: 3.4",
         "Programming Language :: Python :: 3.5",
         "Programming Language :: Python :: 3.6",
